--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "prisma": "^5.4.2",
     "supertest": "^6.3.3"
